<resources>
    <string name="app_name">伯俊POS</string>
    <string name="store">店仓</string>
    <string name="name">用户名</string>
    <string name="input_psw_hint">请输入密码</string>
    <string name="input_user_name_hint">请输入用户名</string>
    <string name="password">密码</string>
    <string name="config">配置</string>
    <string name="login">登录</string>
    <string name="logout">退出</string>
    <string name="back">返回</string>
    <string name="btn_add">新增</string>
    <string name="btn_update">修改</string>
    <string name="btn_search">查询</string>
    <string name="btn_delete">删除</string>
    <string name="btn_help">帮助</string>
    <string name="btn_detail">明细</string>
    <string name="btn_back">退出</string>
    <string name="btn_save">保存</string>
    <string name="btn_exit">退出</string>
    <string name="btn_download">下载</string>
    <string name="sysFunction">系统功能</string>
    <string name="allotManager">调拨管理</string>
    <string name="checkManager">盘点管理</string>
    <string name="checkScan">新盘</string>
    <string name="checkDocManager">盘点单管理</string>
    <string name="checkQuery">盘点查询</string>
    <string name="checktips">确认审核该盘点单据吗？审核后本单将不能续盘！</string>
    <string name="nothatbarcode">不存在该条码数据！</string>
    <string name="hasdata">有数据未保存，是否保存数据？</string>
    <string name="allotOutIn">调拨出入库</string>
    <string name="allotIn">调入界面</string>
    <string name="docno">单据编号</string>
    <string name="upload_state">上传状态</string>
    <string name="docstate">单据状态</string>
    <string name="billdate">单据日期</string>
    <string name="c_dest_id">收货店仓</string>
    <string name="c_orig_id">发货店仓</string>
    <string name="tot_qtyout">数量</string>
    <string name="out_num">出库数量</string>
    <string name="diaobo_num">调拨数</string>
    <string name="statuserid">申请人</string>
    <string name="description">备注</string>
    <string name="allotInQuery">调入查询</string>
    <string name="allotInDetail">调拨入库明细</string>
    <string name="allotOut">调拨出库</string>
    <string name="allotOutQuery">调出查询</string>
    <string name="allotOutApply">发货申请</string>
    <string name="outer">发货方</string>
    <string name="shipper">收货方</string>
    <string name="shelf">货架</string>
    <string name="delshelf">删除货架</string>
    <string name="barcode">条码</string>
    <string name="replenishmentManager">补货管理</string>
    <string name="replenishmentQuery">补货查询</string>
    <string name="replenishmentApply">补货申请</string>
    <string name="replenishmentOrderManager">补货订单</string>
    <string name="replenishment_record">共%1$d个补货单</string>
    <string name="replenishment_order_record">共%1$d个补货订单</string>
    <string name="sales_richangxiaoshou">日常销售</string>
    <string name="sales_xiaoshoubaobiao">销售报表</string>
    <string name="sales_xiaoshoushangchuan">销售上传</string>
    <string name="sales_guanli">销售管理</string>
    <string name="sales_xiaoshou">销售</string>
    <string name="sales_daily_list_title_date">日期</string>
    <string name="sales_daily_list_title_type">类型</string>
    <string name="sales_daily_list_title_count">数量</string>
    <string name="sales_daily_list_title_money">金额</string>
    <string name="sales_daily_list_title_danhao">单号</string>
    <string name="sales_daily_list_title_yinyeyuan">营业员</string>
    <string name="sales_daily_list_title_upstate">上传状态</string>
    <string name="sales_daily_list_title_isactive">有效</string>
    <string name="sales_order_search_title">销售查询</string>
    <string name="sales_detail_title">单据明细</string>
    <string name="sales_detail_tiaoma">条码</string>
    <string name="sales_detail_danjia">单价</string>
    <string name="sales_detail_zhekou">折扣</string>
    <string name="sales_detail_shuliang">数量</string>
    <string name="sales_detail_jine">金额</string>
    <string name="sales_detail_pinming">品名</string>
    <string name="sales_detail_yanse">颜色</string>
    <string name="sales_detail_chicun">尺寸</string>
    <string name="sales_detail_saletype">销售类型</string>
    <string name="sales_daily_report">销售日报</string>
    <string name="sales_monthly_report">销售月报</string>
    <string name="sales_ware_summer_title">商品汇总</string>
    <string name="sales_ware_summer_kuanhao">款号</string>
    <string name="sales_ware_summer_mincheng">名称</string>
    <string name="sales_ware_summer_minxi">明细信息</string>
    <string name="sales_archivement_summer_title">业绩汇总</string>
    <string name="sales_archivement_summer_bianhao">编号</string>
    <string name="sales_new_cardno_discount">卡号\\折扣</string>
    <string name="sales_new_sytle_barcode">款号\\条码</string>
    <string name="sales_new_salesAssistant">营业员</string>
    <string name="sales_new_date">销售日期</string>
    <string name="sales_new_barcode">条码</string>
    <string name="sales_new_price">吊牌价</string>
    <string name="sales_new_discount">折扣</string>
    <string name="sales_new_count">数量</string>
    <string name="sales_new_moeny">金额</string>
    <string name="sales_new_name">品名</string>
    <string name="sales_new_color">颜色</string>
    <string name="sales_new_size">尺码</string>
    <string name="sales_new_type">销售类型</string>
    <string name="sales_new_vip">会员</string>
    <string name="sales_new_jiezhang">结账</string>
    <string name="sales_new_verify">确定</string>
    <string name="sales_new_common_record">%1$d条记录</string>
    <string name="sales_new_common_count">数量：%1$d</string>
    <string name="sales_new_common_money">金额：%1$s</string>
    <string name="sales_settle_pay">应付金额：%1$s</string>
    <string name="sales_settle_count">数量：%1$d</string>
    <string name="sales_settle_orgin">原始单号</string>
    <string name="sales_settle_discount">整单折扣</string>
    <string name="sales_settle_nodata">没有需要结账的商品！</string>
    <string name="sales_settle_reality">折  后  额</string>
    <string name="sales_settle_payway">付款方式</string>
    <string name="sales_settle_paymoney">付款金额</string>
    <string name="sales_settle_cash">现金</string>
    <string name="sales_settle_auto">自动费用</string>
    <string name="sales_settle_bank">银行卡</string>
    <string name="sales_settle_other">其他付款方式</string>
    <string name="sales_settle_type">正常零售</string>
    <string name="sales_settle_noup">未上传</string>
    <string name="sales_settle_hasup">已上传</string>
    <string name="sales_report_query">销售查询</string>
    <string name="sales_order_detail">单据明细</string>
    <string name="sales_settle_dialogmsg">请确认是否要结账？</string>
    <string name="sales_del_item">确定要删除该商品？</string>
    <string name="sales_settle_clear">您要切换到会员销售模式，并清除商品数据吗？</string>
    <string name="sales_settle_clear2">已销售的不能再切换到会员模式！</string>
    <string name="replenishmentOrderApply">补货申请</string>
    <string name="replenishmentOrderQuery">补货订单</string>
    <string name="inventoryManager">库存管理</string>
    <string name="inventoryQuery">库存查询</string>
    <string name="inventoryRefresh">刷新库存</string>
    <string name="inventoryNear">临店库存</string>
    <string name="inventoryStoreName">门店</string>
    <string name="inventoryStyleNumber">款号</string>
    <string name="inventoryStyleCount">数量</string>
    <string name="inventoryStyleName">款名</string>
    <string name="inventoryBarCode">条码</string>
    <string name="inventoryRefreshing">正在刷新库存</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是(Y)</string>
    <string name="no">否(N)</string>
    <string name="inventoryCanotRefreshTips">当前存在未上传的调拨或者销售数据，请先上传</string>
    <string name="inventoryRefreshingTips">刷新中，请稍后</string>
    <string name="systemManager">系统管理</string>
    <string name="systemConfiguration">系统配置</string>
    <string name="systemNetTest">网络测试</string>
    <string name="systemUpdate">系统升级</string>
    <string name="systemDataDownload">资料下载</string>
    <string name="systemDataClean">系统清理</string>
    <string name="systemConfigurationNetConfig">网络配置</string>
    <string name="systemConfigurationStoreInfo">门店信息</string>
    <string name="systemConfigurationParamConfig">参数配置</string>
    <string name="systemConfigurationPrintFormat">打印格式</string>
    <string name="downloadURLAddress">当前配置下载服务器地址</string>
    <string name="interactiveURLAddress">当前配置交互服务器地址</string>
    <string name="pleaseInputServerURL">请输入服务器地址</string>
    <string name="downloadServerURLNotSet">下载服务器地址未配置</string>
    <string name="interactiveServerURLNotSet">交互服务器地址未配置</string>
    <string name="netConfigURLServerTest">服务器连接测试</string>
    <string name="netConfigSystemUpdateConfig">系统升级配置</string>
    <string name="netConfigDataDownload">资料下载</string>
    <string name="netConfigChangePassword">密码修改</string>
    <string name="paramConfigScanBarcodeInterceptNumber">扫描条码截取位数</string>
    <string name="paramConfigMoneyDataAccuracy">金额数据精度</string>
    <string name="paramConfigMoenyRoundingStyle">金额取整方式</string>
    <string name="paramConfigEnableMallsSettlement">启用商场结算</string>
    <string name="paramConfigUseOutsideBarcode">使用外部条码</string>
    <string name="paramConfigControlSalesmanLowestRebate">控制营业员最低折扣</string>
    <string name="printFormatEnableSmallTicketPrint">启动小票打印</string>
    <string name="printFormatSmallTicketPrintCounts">小票打印次数</string>
    <string name="printFormatPrintFormat">打印格式</string>
    <string name="printFormatSmallTicketTitle">小票表头</string>
    <string name="printFormatSmallTicketTail">小票表尾</string>
    <string name="dataDownloadStoreName">门店名称</string>
    <string name="dataDownloadTime">日期：</string>
    <string name="dataDownloadUserData">用户资料</string>
    <string name="dataDownloadProductData">商品资料</string>
    <string name="dataDownloadVipType">会员类型</string>
    <string name="dataDownloadItemStrategy">单品策略</string>
    <string name="dataDownloadSystemParam">系统参数</string>
    <string name="dataDownloadDownload">下载</string>
 	<string name="downloding">下载中</string>
    <string name="tipsDataDownload">温馨提示</string>
    <string name="tipsIAmAlreadyDownloadingFuckYou">我已经在下载了！！！</string>
    <string name="tipsCanYouChooseOne$_$">亲，请至少选择一项！</string>
    <string name="tipsNetworkUnReachable$_$">亲，检查下网络是否可用！</string>
    <string name="tipsBatteryNotEnough$_$">亲，这点电量不敢下载！</string>
    <string name="tipsServerUnReachable$_$">亲，服务器歇菜了！</string>
    <string name="tipsMemoryNotEnough$_$">亲，设备存储空间不够了！</string>
    <string name="tipsPleaseDownloadAgain$_$">亲，下载文件有问题，请重新下载！</string>
    <string name="tipsFileAlreadyExist$_$">亲，已经下载过了！如需重新下载请先清理系统数据！</string>
    <string name="tipsStartDownloadUserData">开始下载用户资料</string>
    <string name="tipsStartDownloadProductData">开始下载商品资料</string>
    <string name="tipsStartDownloadVipType">开始下载会员类型</string>
    <string name="tipsStartDownloadItemStrategy">开始下载单品策略</string>
    <string name="tipsStartDownloadSystemParam">开始下载系统参数</string>
    <string name="tipsUserDataDownloading">用户资料正在下载</string>
    <string name="tipsProductDataDownloading">商品资料正在下载</string>
    <string name="tipsVipTypeDownloading">会员类型正在下载</string>
    <string name="tipsItemStrategyDownloading">单品策略正在下载</string>
    <string name="tipsSystemParamDownloading">系统参数正在下载</string>
    <string name="tipsUserDataDownloadFinish">用户资料下载完毕</string>
    <string name="tipsProductDataDownloadFinish">商品资料下载完毕</string>
    <string name="tipsVipTypeDownloadFinish">会员类型下载完毕</string>
    <string name="tipsItemStrategyDownloadFinish">单品策略下载完毕</string>
    <string name="memberRegist">会员注册</string>
    <string name="memberRegistCardNum">卡号</string>
    <string name="memberRegistName">姓名</string>
    <string name="memberRegistSex">性别</string>
    <string name="memberRegistPhoneNum">手机</string>
    <string name="memberRegistIdentityCardNum">身份证号</string>
    <string name="memberRegistVipType">VIP类型</string>
    <string name="memberRegistBirthday">出生日期</string>
    <string name="memberRegistSalesAssistant">营业员</string>
    <string name="memberRegistEmail">电子邮箱</string>
    <string name="memberRegistCreateDate">开卡日期</string>
    <string name="memberRegistVerification">验证</string>
    <string name="memberRegistSave">保存</string>
    <string name="male">男</string>
    <string name="female">女</string>
</resources>