<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/memberRegist"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg"
            android:padding="1dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/memberRegistCardNum"
                android:textColor="@android:color/holo_red_dark"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/memberRegistCardNumET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" 
                android:singleLine="true"/>

            <Button
                android:id="@+id/memberRegistVerifyBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/memberRegistVerification"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg"
            android:padding="1dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/memberRegistName"
                android:textColor="@android:color/holo_red_dark"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/memberRegistCardNameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" 
                android:singleLine="true"/>

            <RadioGroup
                android:id="@+id/memberRegistRG"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:text="@string/memberRegistSex"
                android:textAppearance="?android:attr/textAppearanceMedium" >

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" >
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg"
            android:padding="1dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/memberRegistPhoneNum"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                />

            <EditText
                android:id="@+id/memberRegistPhoneNumET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" 
                android:inputType="phone"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg"
            android:padding="1dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/memberRegistIdentityCardNum"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/memberRegistIdentityNumET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" 
                android:inputType="number"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg"
            android:padding="1dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/memberRegistVipType"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner 
                android:id="@+id/memberRegistVipTypeSP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg"
            android:padding="1dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/memberRegistBirthday"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/memberRegistBirthdayET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" 
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg"
            android:padding="1dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/memberRegistSalesAssistant"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/memberRegistSalesAssistantSP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" 
                android:entries="@array/empployee"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg"
            android:padding="1dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/memberRegistEmail"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/memberRegistEmailET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" 
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg"
            android:padding="1dp" 
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/memberRegistCreateDate"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/memberRegistCreateDateET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

            <Button
                android:id="@+id/memberRegistSaveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/memberRegistSave"
                android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</RelativeLayout>