<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">
    
    <RelativeLayout 
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp">
        
		<CheckBox
		    android:id="@+id/smallTicketPrintCheckBox"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
		    android:checked="true"/>
		
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@id/smallTicketPrintCheckBox"
		    android:text="@string/printFormatEnableSmallTicketPrint"
		    android:layout_alignBaseline="@+id/smallTicketPrintCheckBox"/>
		
		<TextView
		    android:id="@+id/smallTicketPrintCountTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/printFormatSmallTicketPrintCounts"
	        android:layout_marginTop="60dp"
	        android:layout_below="@id/smallTicketPrintCheckBox"/>
		
		<Spinner
		    android:id="@+id/smallTicketPrintCountSpinner"
		    android:layout_height="wrap_content"
		    android:layout_width="200dp"
		    android:layout_alignParentRight="true"
		    android:layout_toRightOf="@id/smallTicketPrintCountTextView"
		    android:layout_alignBaseline="@+id/smallTicketPrintCountTextView"/>
	
		<TextView
		    android:id="@+id/printFormatTextView" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/printFormatPrintFormat"
	        android:layout_marginTop="60dp"
	        android:layout_below="@id/smallTicketPrintCountTextView"/>
	
		<Spinner
		    android:id="@+id/printFormatSpinner"
		    android:layout_height="wrap_content"
		    android:layout_width="200dp"
		    android:layout_alignParentRight="true"
		    android:layout_toRightOf="@id/printFormatTextView"
		    android:layout_alignBaseline="@+id/printFormatTextView"/>
		
    </RelativeLayout>
 	
    <TextView
        android:id="@+id/head"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="70dp"
		android:layout_marginLeft="20dp"
		android:text="@string/printFormatSmallTicketTitle"
		android:layout_below="@+id/space1"/>
    
    <EditText
        android:id="@+id/smallTicketTitleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:layout_alignBaseline="@+id/head"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/head"/>
    
    <TextView
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_alignLeft="@+id/head"
        android:layout_marginTop="40dp"
        android:text="@string/printFormatSmallTicketTail"/>
    
    <EditText
        android:id="@+id/smallTicketTailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/end"
        android:minWidth="200dp"
        android:layout_marginLeft="30dp"
        android:layout_alignBaseline="@+id/end"
        android:padding="2dp"/>
 	              
    <Button 
       	android:id="@+id/saveButton"
       	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:layout_alignParentBottom="true"
       	android:text="@string/btn_save"/>
    
</RelativeLayout>